# wheeled_quadruped_robot

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  wheeled_quadruped_stage.usd
docs/: SETUP_WINDOWS.md  TRAINING.md
docs/wiki/: 01-Overview.md  02-The-Robot.md  03-RL-and-MDP-Foundations.md  04-Isaac-Lab-Architecture.md  05-Balance-Task.md  06-Velocity-Task.md  07-PPO-Algorithm.md  08-Asymmetric-Actor-Critic-and-Sim2Real.md  09-Code-Architecture.md  10-Training-and-Reproducing.md  11-Sim-to-Sim-Validation.md  Home.md  README.md
install/: local_setup.sh  setup.sh
log/: latest_build
pretrained/: README.md
pretrained/balance/: model_1399.pt  policy.onnx  policy_torchscript.pt
pretrained/balance_rough/: model_1499.pt  policy.onnx  policy_torchscript.pt
scripts/: eval_tracking.py  list_envs.py  verify_env.py
scripts/rsl_rl/: play.py  (+1 more)
sim2sim_mujoco/: README.md  export_policies.py  make_model.py  sim2sim.py  wheeled_quadruped.xml  wheeled_quadruped_rough.xml
source/wheeled_quadruped/: pyproject.toml
source/wheeled_quadruped/wheeled_quadruped/: __init__.py
source/wheeled_quadruped/wheeled_quadruped/assets/: __init__.py
source/wheeled_quadruped/wheeled_quadruped/tasks/: __init__.py
source/wheeled_quadruped/wheeled_quadruped/tasks/balance/: __init__.py  balance_env_cfg.py  rough_env_cfg.py
source/wheeled_quadruped/wheeled_quadruped/tasks/balance/agents/: rl_games_ppo_cfg.yaml  rsl_rl_ppo_cfg.py  sb3_ppo_cfg.yaml  skrl_ppo_cfg.yaml
source/wheeled_quadruped/wheeled_quadruped/tasks/velocity/: __init__.py  rough_env_cfg.py  velocity_env_cfg.py
source/wheeled_quadruped/wheeled_quadruped/tasks/velocity/agents/: rsl_rl_ppo_cfg.py
source/wheeled_quadruped/wheeled_quadruped/terrains/: __init__.py
src/robot_description/: package.xml
(+12 files in other folders)
