<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_description</name>
  <version>1.0.0</version>
  <description>
    URDF/xacro description and meshes for the wheeled quadruped robot, used to
    build the Isaac Sim USD articulation for reinforcement-learning simulation.
  </description>
  <maintainer email="tamirumickyas@gmail.com">Mickyas Tamiru Asfaw</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_cmake</depend>
  <depend>urdf</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
